# adduser-gtk

./: Makefile.am  README.md  adduser.desktop  autogen.sh  configure.ac
gui/: custom.css  input_user.ui  input_user.ui~  input_user.vala
shell/: Makefile.am  aturHostname  blankon_deluser_if_exists  tambahUser.sh
